# skills-mcp-server

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  Makefile  PUBLISHING.md  README.md  eslint.config.mjs  mcp.json.example  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  tsconfig.json
.github/workflows/: publish-skills-mcp-server.yml
scripts/: postinstall-fix.mjs
src/: index.ts
src/resources/: sync-skills.py  sync-skills.ts
tests/: __init__.py  requirements.txt  test-install.ts  test-server.ts  test-sync-script.ts  test_sync_script.py
